# upcells

./: .env.example  .gitignore  CLAUDE.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  UPCELLS_INFERENCE_NOTES.md
docs/sales-accelerator/: PLAN.md
docs/setup/: salesforce-connected-app.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: admin.rs  assistant.rs  connections.rs  export.rs  knowledge.rs  license.rs  mod.rs  queries.rs  sync.rs
src-tauri/src/data_pool/: import.rs  mod.rs  query.rs  report.rs  safety.rs  schema.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_data_pools.sql  003_knowledge.sql
src-tauri/src/export/: mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/inference/: engine.rs  hardware.rs  mod.rs  model_downloader.rs  model_registry.rs  recommend.rs  stream.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/knowledge/: chunk.rs  extract.rs  ingest.rs  mod.rs  store.rs
src-tauri/src/license/: mod.rs
src-tauri/src/salesforce/: auth.rs  mod.rs  rest_api.rs  types.rs
src-tauri/src/sync/: mod.rs
src/hooks/: useAssistant.ts  useConnections.ts  useExport.ts  useLicense.ts  useQueries.ts  useSync.ts
src/lib/: tauri-commands.ts  utils.ts  validators.ts
src/pages/: AdminPage.tsx  AssistantPage.tsx  DashboardPage.tsx  HistoryPage.tsx  ImportPage.tsx  LicensePage.tsx  MainApp.tsx  QueriesPage.tsx  SalesDataPage.tsx  SettingsPage.tsx
src/stores/: adminStore.ts  (+4 more)
worker/: index.js  wrangler.toml
(+19 files in other folders)
