[package]
name = "upcells"
version = "0.1.0"
description = "Upcells — spreadsheet editing for Salesforce"
authors = ["Mallmont"]
edition = "2021"

[lib]
name = "upcells_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "upcells"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Spreadsheet / CSV I/O
rust_xlsxwriter = "0.78"
csv = "1.3"
calamine = "0.26"

# OAuth PKCE helpers
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
url = "2"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.150", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = "0.1.150"
